reduce map height on mobile and fix image container margin bug

--- a/app/assets/stylesheets/components/_apartment_show.scss
+++ b/app/assets/stylesheets/components/_apartment_show.scss
@@ -29,11 +29,16 @@ $desktop-breakpoint: 1090px;
     margin-bottom: 12px;
   }
   &-mapWrapper {
-    height: 300px;
+    height: 225px;
     margin-bottom: 10px;
   }
   &-quirksIndexWrapper {
     margin: 0 20px;
+  }
+  @media screen and (min-width: 550px) {
+    &-mapWrapper {
+      height: 300px;
+    }
   }
   @media screen and (min-width: 768px) {
     &-apartmentDetailsContainer {
