--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -221,15 +221,3 @@
     font-size: 30px;
   }
 }
-
-@media screen and (max-width: 400px) {
-  .image-index-container {
-    width: 91%;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .image-index-container {
-    width: 92.5%;
-  }
-}
